Fetching APIs, and fixing components

--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -4,4 +4,12 @@
     padding: 0;
     font-family: 'Inter', sans-serif;
     font-size: 14px;
+    box-sizing: border-box;
+}
+body{
+    transition: background-color 0.3s;
+    background-color: hsl(230, 17%, 14%);
+}
+.light{
+    background-color:hsl(0, 0%, 100%);
 }
