--- a/src/assets/css/Header.css
+++ b/src/assets/css/Header.css
@@ -5,6 +5,10 @@ header{
     background: hsl(232, 19%, 15%);
     padding-bottom: 130px;
     border-radius: 0px 0px 20px 20px;
+    transition: background .3s;
+}
+body.light header{
+    background: hsl(225, 100%, 98%);
 }
 .container{
     display: flex;
@@ -21,11 +25,18 @@ header .container h1{
     font-size: 1.95rem;
     padding: 35px 0px;
     color: #fff;
+    transition: color .3s;
+}
+body.light header .container h1{
+    color: hsl(230, 17%, 14%);
 }
 header .container h1 span{
     margin-top:5px;
     color: hsl(228, 34%, 66%);
     transition: color 0.3s;
+}
+body.light header .container h1 span{
+    color: hsl(228, 12%, 44%);
 }
 .dark-mode-button{
     font-weight: 900;
@@ -33,8 +44,13 @@ header .container h1 span{
     color: hsl(228, 34%, 66%);
     display: flex;
     align-items: center;
+    transition: color .3s;
+}
+body.light .dark-mode-button{
+    color: hsl(228, 12%, 44%);
 }
 .dark-mode-button button {
+    cursor: pointer;
     display: flex;
     align-items: center;
     position: relative;
@@ -44,7 +60,14 @@ header .container h1 span{
     border-radius: 25px;
     padding: 3px;
     border: none;
+    transition: background 0.3s;
     background: linear-gradient(to right, hsl(210, 78%, 56%), hsl(146, 68%, 55%));    
+}
+.dark-mode-button button:focus{
+    outline: none;
+}
+.dark-mode-button button:hover{
+    background: hsl(230, 22%, 74%);
 }
 .dark-mode-button button::after{
     content: '';
@@ -52,8 +75,13 @@ header .container h1 span{
     width: 18px;
     height: 18px;
     border-radius: 50%;
-    background: black;
+    transition: 0.3s;
+    background: hsl(230, 17%, 14%);
+}
+.dark-mode-button .active{
+    background: hsl(230, 22%, 74%);
 }
 .dark-mode-button .active::after{
     transform: translateX(120%);
+    background: hsl(0, 0%, 100%);
 }
